Bug fix: Broken UI layout of extension prefs page when Dropbox user name is long
(issue #67)

--- a/src/pages/options.css
+++ b/src/pages/options.css
@@ -221,6 +221,15 @@ body[data-os="mac"] #sync-icon.conn-error {
 }
 
 #fh-usr-info {
+    width: 324px;
+    padding-left: 1px;
+    padding-right: 1px;
+    border: none;
+    
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
     font-size: 13px;
 }
 
